- better algorithm for choosing nameservers (!1030, !1126)
- daf module: add daf.clear() (!1114)
- dnstap module: more features and don't log internal requests (!1103)
- randomize record order by default, i.e. reorder_RR(true) (!1123)

Bugfixes
--------
- view: fail config if bad subnet is specified (!1112)
- doh2: fix memory leak (!1117)

Incompatible changes
--------------------
- dnstap module: `log_responses` option gets nested under `client`;
  see new docs for config example (!1103)


Knot Resolver 5.2.1 (2020-12-09)
================================

Improvements
------------
- doh2: send Cache-Control header with TTL (#617, !1095)

Bugfixes
--------
- fix map() command on 32-bit platforms; regressed in 5.2.0 (!1093)
- doh2: restrict endpoints to doh and dns-query (#636, !1104)
- renumber: map to correct subnet when using multiple rules (!1107)


Knot Resolver 5.2.0 (2020-11-11)
================================

Improvements
------------
- doh2: add native C module for DNS-over-HTTPS (#600, !997)
- xdp: add server-side XDP support for higher UDP performance (#533, !1083)
- lower default EDNS buffer size to 1232 bytes (#538, #300, !920);
  see https://dnsflagday.net/2020/
- net: split the EDNS buffer size into upstream and downstream (!1026)
- lua-http doh: answer to /dns-query endpoint as well as /doh (!1069)
- improve resiliency against UDP fragmentation attacks (disable PMTUD) (!1061)
- ta_update: warn if there are differences between statically configured
  keys and upstream (#251, !1051)
- human readable output in interactive mode was improved
- doc: generate info page (!1079)
- packaging: improve sysusers and tmpfiles support (!1080)

Bugfixes
--------
- avoid an assert() error in stash_rrset() (!1072)
- fix emergency cache locking bug introduced in 5.1.3 (!1078)
- migrate map() command to control sockets; fix systemd integration (!1000)
- fix crash when sending back errors over control socket (!1000)